wsl: cleanup formatting WSLDistribution
GitOrigin-RevId: e927499d8bb7c30d66631f6f83769c860e8688d6